# agent-vm

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  LAUNCH-PROFILE.md  PLAN.md  README.md  agent-vm-wsl.sh  balloon-daemon.py  claude-vm-proxy.py  claude-vm.sh  clipboard-pty.py  copilot_token.py  credential-proxy.py  github-git-proxy.py  github-mcp-proxy.py  github_app_token.sh  github_app_token_demo.py  mitmproxy-addon.py  test-commit-1.txt  test-commit-2.txt  test-draft-1.txt  test-draft-2.txt  test_credential_proxy.py  test_e2e_vm.py  test_proxy_e2e.py  test_proxy_refresh.py  test_proxy_scope.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml  ci.yml  release-npm.yml
claude-vm-shim/: Cargo.toml  README.md  install.sh
claude-vm-shim/bridge/: Cargo.toml
claude-vm-shim/bridge/src/: main.rs
claude-vm-shim/dispatcher/: Cargo.toml
claude-vm-shim/dispatcher/src/: main.rs
claude-vm-shim/shim/: Cargo.toml
claude-vm-shim/shim/src/: lib.rs
claude-vm-shim/wrapper/: claude-wrapper.sh
crates/agent-vm/: Cargo.toml
crates/agent-vm/src/: auto_publish.rs  clipboard.rs  defaults.rs  exec_tunnel.rs  host_paths.rs  image_api_version.rs  image_check.rs  intercept_hook.rs  main.rs  msb_install.rs  proc_net_tcp.rs  pull.rs  pull_progress.rs  pulled_marker.rs  run.rs  secrets.rs  session.rs  setup.rs
doc/: architecture.md
images/: Dockerfile  build.sh  seed-claude-plugins.sh
libkrunfw-overrides/: README.md  cmdline-size_x86_64.patch  config-libkrunfw_x86_64.patch
npm-dist/: .gitignore  README.md
npm-dist/agent-vm/: README.md  package.json
npm-dist/agent-vm-linux-arm64/: README.md  package.json
npm-dist/agent-vm-linux-x64/: README.md  package.json
profiling/: build_legacy.sh  build_variants.sh  measure_variants.sh
