[workspace]
resolver = "3"
members = ["crates/agent-vm"]
# microsandbox declares its own workspace under vendor/; keep it separate
# so Cargo doesn't try to absorb it into ours.
exclude = ["vendor/microsandbox"]

[workspace.package]
version = "0.1.12"
edition = "2024"
license = "MIT"
repository = "https://github.com/wirenboard/agent-vm"

[profile.release]
codegen-units = 16
lto = "thin"
strip = true

# For distribution builds where binary size / runtime perf matter most.
# Slower to build (single-threaded LTO + 1 codegen unit). Use: `cargo build --profile dist`.
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"
