[package]
name = "agent-vm"
description = "Sandboxed VMs for AI coding agents, built on microsandbox."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-vm"
path = "src/main.rs"

[dependencies]
microsandbox = { path = "../../vendor/microsandbox/crates/microsandbox" }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
sha2 = "0.10"
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
